--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "ts-node-dev --debug --respawn --transpile-only src/main.ts",
+    "start:dev": "ts-node-dev --debug --respawn --transpile-only src/web/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "cnpj": "^4.0.1",
     "google-auth-library": "^7.10.2",
     "passport": "^0.5.0",
     "passport-google-oauth": "^2.0.0",
@@ -34,7 +35,8 @@
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typescript-monads": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
