feat: adicionar arquivos p/ execução em container

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ JWT_EXPIRES_IN=30d
 
 # Whitelist p/ emails autorizados, separados por ','
 AUTHORIZATION_EMAIL_WHITELIST=
+
+# URL p/ conexao com o banco de dados
+POSTGRES_URL=postgres://postgres:postgres@localhost:5432/postgres
