--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "ts-node-dev --debug --respawn --transpile-only src/web/main.ts",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/web/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/web/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
