feature: adiciona cors

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ GOOGLE_REDIRECT_URL=http://localhost:3000/auth/callbacks/google
 JWT_SECRET=secret
 JWT_EXPIRES_IN=30d
 
+# Configuracao p/ header cors
+CORS_ORIGINS=http://localhost:3000
+
 # Whitelist p/ emails autorizados, separados por ','
 AUTHORIZATION_EMAIL_WHITELIST=
 
