--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "nest:cnpj-data-worker": "nest --config src/workers/cnpj-data/nest-cli.json"
   },
   "dependencies": {
-    "@dnausp/core": "0.0.1-alpha.10",
+    "@dnausp/core": "^0.0.1-alpha.22",
     "@nestjs/axios": "^0.0.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.2",
